# GRiD

./: .all-contributorsrc  .buildinfo  .buildinfo.bak  .gitignore  .gitmodules  README.md  __init__.py  compare_rnea_fb_spatial.py  contribution_guidelines.html  faq.html  generateGRiD.py  genindex.html  gridcodegenerator.html  iiwa14.m  index.html  matlab_dynamics_test_script.m  minv_testing.py  objects.inv  printGRiD.py  printReferenceValues.jl  printReferenceValues.py  pyproject.toml  rbdreference.html  revised_generate_spatial_model.py  search.html  searchindex.js  sphinx_edit_guide.html  testGRiD.py  testGRiDRefactorings.py  test_crba.cu  todo_list.html  urdfparser.html
.github/workflows/: auto-add-contributors.yml  gh-pages.yml  python_tests.yml
TestGRiD/: testGRiD.cu  testGRiDFB.cu
_sources/: index.rst.txt  sphinx_edit_guide.rst.txt  todo_list.rst.txt
_sources/api_reference/: rbd.rst.txt
_sources/user_guide/: landing_page.rst.txt
_static/: custom.css  documentation_options.js
api_reference/: gridcodegen.html  index.html  rbd.html  urdf.html
bindings/: CMakeLists.txt  README.md  init_include.py  setup.py
bindings/src/: python_bindings.cu
bindings/tests/: test_grid_cuda.py
contents/: contributors.qmd
docs/: .flake8  Makefile  RBDReference_README.md  URDFParser_README.md  pre-commit-config.yaml  requirements.txt
docs/source/: conf.py  contribution_guidelines.rst  faq.rst  index.rst  rbdreference.rst  sphinx_edit_guide.rst  todo_list.rst  urdfparser.rst
test/: __init__.py  testEEgrad.py  test_crba.cu
user_guide/: landing_page.html
user_guide/concepts/: grid_methedology.html  index.html
util/: util.py
(+34 files in other folders)
